# natural-language-compiler

./: .gitignore  Makefile  README.md  dune-project  test1.json
_build/: .db  .digest-db  log
_build/default/: README.md  natural_language_compiler.dune-package  natural_language_compiler.install  natural_language_compiler.opam
_build/default/.dune/: configurator  configurator.v2
_build/default/lib/: compilib.cma  compilib.cmxa  compilib.cmxs  compilib.ml-gen  lambda.ml  lexer.ml  lexer.mll  natural_language_compiler.cma  natural_language_compiler.cmxa  natural_language_compiler.cmxs  natural_language_compiler.ml-gen  parser.ml  parser.mli  parser.mly  parser__mock.ml.mock  parser__mock.mli.inferred
_build/default/lib/.compilib.objs/: compilib__Asts.impl.d  compilib__Compiler.impl.all-deps  compilib__Compiler.impl.d  compilib__Lambda.impl.d  compilib__Lexer.impl.all-deps  compilib__Parser.impl.d  compilib__Typeinferencer.impl.all-deps  compilib__Typeinferencer.impl.d  parser__mock.impl.d
_build/default/lib/.merlin-conf/: lib-compilib  lib-natural_language_compiler
_build/default/lib/.natural_language_compiler.objs/: natural_language_compiler__Asts.impl.d  natural_language_compiler__Lexer.impl.all-deps  natural_language_compiler__Lexer.impl.d  natural_language_compiler__Parser.impl.all-deps  natural_language_compiler__Parser.intf.d
_build/default/test/.merlin-conf/: exe-natural_language_compiler
lib/: asts.ml  beta.ml  compiler.ml  dune  lambda.ml  lexer.mll  parser.mly  printer.ml  prog.mli  typeinferencer.ml  utoptest.ml
test/: dune
(+53 files in other folders)
